Java 22 switch patterns