@@ -25,7 +25,7 @@ class MultiplexedFunctionHandler extends AbstractFunctionHandler {
     @Override
     public LogicValue handleFunction(FunctionCall call, Consumer<LogicInstruction> program, List<LogicFunctionArgument> arguments) {
         // toKeywordOptional handles the case of somebody passing in a number as the first argument of e.g. ulocate.
-        FunctionHandler handler = functions.get(BaseFunctionMapper.toKeywordOptional(arguments.get(0).value()).getKeyword());
+        FunctionHandler handler = functions.get(BaseFunctionMapper.toKeywordOptional(arguments.getFirst().value()).getKeyword());
         if (handler == null) {
             throw new MindcodeInternalError("Unhandled type of " + getOpcode() + " in " + arguments);
         }
