@@ -323,7 +323,7 @@ public abstract class BaseInstructionProcessor extends AbstractMessageEmitter im
     private LogicInstruction createGenericInstruction(AstContext astContext, Opcode opcode, List<LogicArgument> arguments,
             List<InstructionParameterType> params) {
         List<InstructionParameterType> outputs = params.stream().filter(InstructionParameterType::isOutput).toList();
-        if (outputs.size() == 1 && outputs.get(0) == InstructionParameterType.RESULT) {
+        if (outputs.size() == 1 && outputs.getFirst() == InstructionParameterType.RESULT) {
             return new BaseResultInstruction(astContext, opcode, arguments, params);
         } else {
             return new BaseInstruction(astContext, opcode, arguments, params);
@@ -334,48 +334,43 @@ public abstract class BaseInstructionProcessor extends AbstractMessageEmitter im
     public void resolve(LogicInstruction instruction, Consumer<LogicInstruction> consumer) {
         AstContext astContext = instruction.getAstContext();
 
-        if (instruction instanceof NoOpInstruction || instruction instanceof GotoLabelInstruction || instruction instanceof LabelInstruction) {
-            return;
+        switch (instruction) {
+            case NoOpInstruction ix -> { }
+            case GotoLabelInstruction ix -> { }
+            case LabelInstruction ix -> { }
+            case PushInstruction ix -> {
+                consumer.accept(createWrite(astContext, ix.getVariable(), ix.getMemory(), stackPointer()));
+                consumer.accept(createOp(astContext, ADD, stackPointer(), stackPointer(), LogicNumber.ONE));
+            }
+            case PopInstruction ix -> {
+                consumer.accept(createOp(astContext, Operation.SUB, stackPointer(), stackPointer(), LogicNumber.ONE));
+                consumer.accept(createRead(astContext, ix.getVariable(), ix.getMemory(), stackPointer()));
+            }
+            case CallRecInstruction ix -> {
+                consumer.accept(createInstruction(astContext, WRITE, ix.getRetAddr(), ix.getStack(), stackPointer()));
+                consumer.accept(createOp(astContext, ADD, stackPointer(), stackPointer(), LogicNumber.ONE));
+                consumer.accept(createInstruction(astContext, SET, LogicBuiltIn.COUNTER, ix.getCallAddr()));
+            }
+            case ReturnInstruction ix -> {
+                LogicVariable retAddr = nextTemp();
+                consumer.accept(createOp(astContext, Operation.SUB, stackPointer(), stackPointer(), LogicNumber.ONE));
+                consumer.accept(createRead(astContext, retAddr, ix.getStack(), stackPointer()));
+                consumer.accept(createInstruction(astContext, SET, LogicBuiltIn.COUNTER, retAddr));
+            }
+            case CallInstruction ix -> {
+                consumer.accept(createJumpUnconditional(astContext, ix.getCallAddr()));
+            }
+            case SetAddressInstruction ix -> {
+                consumer.accept(createInstruction(astContext, SET, ix.getResult(), ix.getLabel()));
+            }
+            case GotoInstruction ix -> {
+                consumer.accept(createInstruction(astContext, SET, LogicBuiltIn.COUNTER, ix.getIndirectAddress()));
+            }
+            default -> {
+                // GotoOffsetInstruction is handled by LabelResolver, as the actual label value needs to be known
+                consumer.accept(instruction);
+            }
         }
-
-        if (instruction instanceof PushInstruction ix) {
-            consumer.accept(createWrite(astContext, ix.getVariable(), ix.getMemory(), stackPointer()));
-            consumer.accept(createOp(astContext, ADD, stackPointer(), stackPointer(), LogicNumber.ONE));
-            return;
-        }
-        if (instruction instanceof PopInstruction ix) {
-            consumer.accept(createOp(astContext, Operation.SUB, stackPointer(), stackPointer(), LogicNumber.ONE));
-            consumer.accept(createRead(astContext, ix.getVariable(), ix.getMemory(), stackPointer()));
-            return;
-        }
-        if (instruction instanceof CallRecInstruction ix) {
-            consumer.accept(createInstruction(astContext, WRITE, ix.getRetAddr(), ix.getStack(), stackPointer()));
-            consumer.accept(createOp(astContext, ADD, stackPointer(), stackPointer(), LogicNumber.ONE));
-            consumer.accept(createInstruction(astContext, SET, LogicBuiltIn.COUNTER, ix.getCallAddr()));
-            return;
-        }
-        if (instruction instanceof ReturnInstruction ix) {
-            LogicVariable retAddr = nextTemp();
-            consumer.accept(createOp(astContext, Operation.SUB, stackPointer(), stackPointer(), LogicNumber.ONE));
-            consumer.accept(createRead(astContext, retAddr, ix.getStack(), stackPointer()));
-            consumer.accept(createInstruction(astContext, SET, LogicBuiltIn.COUNTER, retAddr));
-            return;
-        }
-        if (instruction instanceof CallInstruction ix) {
-            consumer.accept(createJumpUnconditional(astContext, ix.getCallAddr()));
-            return;
-        }
-        if (instruction instanceof SetAddressInstruction ix) {
-            consumer.accept(createInstruction(astContext, SET, ix.getResult(), ix.getLabel()));
-            return;
-        }
-        if (instruction instanceof GotoInstruction ix) {
-            consumer.accept(createInstruction(astContext, SET, LogicBuiltIn.COUNTER, ix.getIndirectAddress()));
-            return;
-        }
-
-        // Note: GotoOffsetInstruction is handled by LabelResolver, as the actual label value needs to be known
-        consumer.accept(instruction);
     }
 
     @Override
@@ -488,7 +483,7 @@ public abstract class BaseInstructionProcessor extends AbstractMessageEmitter im
         if (variants == null) {
             return null;
         } else if (variants.size() == 1) {
-            return variants.get(0);
+            return variants.getFirst();
         } else {
             // Selector keyword position in the list
             int position = opcodeKeywordPosition.get(opcode);
@@ -554,7 +549,7 @@ public abstract class BaseInstructionProcessor extends AbstractMessageEmitter im
             throw new MindcodeInternalError("Cannot determine variant selector position for opcode " + opcode);
         }
 
-        return indexes.get(0);
+        return indexes.getFirst();
     }
 
     private String getOpcodeVariantKeyword(OpcodeVariant opcodeVariant) {
